# news-pipeline

./: .env.example  .gitignore  APPLY-0.4.6.sh  CHANGES.md  DEPLOY-0.4.5.sh  DEPLOY-v0_10_0.md  DEPLOY-v0_11_0.md  DEPLOY-v0_11_1.md  DEPLOY-v0_11_3.md  DEPLOY-v0_5_9.md  DEPLOY-v0_6_0.md  DEPLOY-v0_7_0.md  DEPLOY-v0_8_0.md  DEPLOY-v0_9_0.md  FIXES-v0.4.3.md  FIXES-v0.5.8.md  MODEL-UPGRADE-v0_4_8.md  PATCH_NOTES_a13.md  PATCH_NOTES_v0_10_0.md  PATCH_NOTES_v0_11_0.md  PATCH_NOTES_v0_11_1.md  PATCH_NOTES_v0_11_3.md  PATCH_NOTES_v0_4_7.md  PATCH_NOTES_v0_5_1.md  PATCH_NOTES_v0_5_2.md  PATCH_NOTES_v0_5_3.md  PATCH_NOTES_v0_5_4.md  PATCH_NOTES_v0_5_5.md  PATCH_NOTES_v0_5_9.md  PATCH_NOTES_v0_6_0.md  PATCH_NOTES_v0_7_0.md  PATCH_NOTES_v0_8_0.md  PATCH_NOTES_v0_9_0.md  README.md  __init__.py  a13-chat-agent-design-v1_0.md  env.example  exit_profiles.yaml  exits.py  index.html  (+49 more)
config/: a1.yaml  a12.yaml  a13.yaml  a2.yaml  a4.yaml  a5.yaml  a6.yaml  a7.yaml  a8.yaml  c8.yaml  deadman.yaml  dedup.yaml  earnings.yaml  exit_profiles.yaml  gate.yaml  risk.yaml  scanner.yaml  sources.yaml
dashboard/: app.py  app_chat.py  chat_api.py  chat_page.html  chat_tab.html  index.html
ops/: RUNBOOK.md  a12-schema-probe.py  a13-schema-probe.py  alpaca-smoke.py  backup.sh  docker-compose.yml  preflight.py  prune-queue.sh  snapshot_nav.py  soak-check.sql  soak-criteria.md  soak-log-template.md
ops/sudoers.d/: a13-wake  a7-heavy
ops/systemd/: a1-triage.service  a12-guard.service  a13-chat.service  (+35 more)
schema/: control-init.sql  journal-schema.sql  news-store-schema.sql
tests/: conftest.py
(+135 files in other folders)
